fixed class info spacing and added price

--- a/public/css/classes/main.css
+++ b/public/css/classes/main.css
@@ -69,7 +69,7 @@ video {
 #lessons ul {
   display: inline-block;
   vertical-align: top;
-  width: 85%;
+  width: 95%;
   margin: 0 auto;
 }
 
@@ -88,10 +88,26 @@ video {
 #lessons ul li .info {
   height: 20vh;
   font-family: 'Montserrat';
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: top
 }
+
+#lessons ul li .info * {}
 
 #lessons ul li:hover {
   background-color: rgba(225, 222, 237, .45);
+}
+
+#lessons .title_price * {
+  display: block;
+  margin-bottom: 1em
+}
+
+.title_price h4 {
+  font-weight: bold;
 }
 
 #lessons ul li .info h3 {}
@@ -104,6 +120,11 @@ video {
   font-family: 'M PLUS 1p';
 }
 
+#lessons ul li .expand span {
+  background-color: rgba(250, 250, 250, .4);
+  padding: .25em .75em;
+}
+
 .expand, .expand:visited {
   color: black;
   text-decoration: none
@@ -113,19 +134,28 @@ video {
   text-decoration: underline
 }
 
+/*
 #lessons ul li .info * {
   display: inline-block;
   vertical-align: middle;
   margin-right: 2em;
+}*/
+
+.img-container, .title_price {
+  margin-right: 2em
 }
 
-#lessons ul li img {
-  max-width: 20%;
-  height: 100%;
+#lessons ul li .img-container {
+  /*  max-width: 20%;*/
+  flex-basis: 20%;
+}
+
+#lessons ul li .img-container img {
+  width: 100%;
 }
 
 #lessons ul li .info h3 {
-  width: 40%;
+  /*  width: 40%;*/
 }
 
 #lessons ul li .info button {
